Test: 로컬 환경에서 연동 확인